--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,15 @@
 @import "./utils/variables";
+@import "./utils/breakpoints";
+@import "./base/container";
 @import "./base/common";
 
 @import "./components/button";
 @import "./components/form";
-@import "./components/modal";
 @import "./components/links";
 @import "./components/icons";
 @import "./components/logo";
 @import "./components/social-links";
+@import "./components/modal";
 
 @import "./layout/nav";
 @import "./layout/hero";
