--- a/css/main.css
+++ b/css/main.css
@@ -286,6 +286,7 @@ body {
 }
 
 .hero {
+  margin-bottom: 30px;
   text-align: center;
   background-color: #2f303a;
 }
@@ -320,5 +321,44 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.list-bar {
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  list-style: none;
+}
+
+.list-description {
+  margin-bottom: 30px;
+}
+
+.list-description :last-child {
+  margin-bottom: 0;
+}
+
+.list-description .icon {
+  padding: 25px 190px;
+  width: 450px;
+  height: 120px;
+  background-color: #f5f4fa;
+}
+
+.subtitle {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+}
+
+.first-description {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
 }
 /*# sourceMappingURL=main.css.map */
