--- a/css/main.css
+++ b/css/main.css
@@ -361,4 +361,58 @@ body {
   line-height: 24px;
   letter-spacing: 0.03em;
 }
+
+.title-bar {
+  display: none;
+}
+
+.team {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f5f4fa;
+}
+
+.images {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.titles {
+  margin: 0;
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.photo {
+  margin-bottom: 30px;
+  width: 100%;
+  height: 100%;
+}
+
+.team-profile {
+  text-align: center;
+}
+
+.team-profile .text {
+  margin: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.team-profile .description {
+  margin: 0;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+}
 /*# sourceMappingURL=main.css.map */
