--- a/css/main.css
+++ b/css/main.css
@@ -285,6 +285,75 @@ body {
   color: #2196f3;
 }
 
+.team-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 24px;
+  padding: 0;
+  list-style: none;
+  width: 206px;
+}
+
+.icons-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.icons-bar:last-child {
+  margin-right: 0px;
+}
+
+.icon-links {
+  width: 44px;
+  height: 44px;
+  padding: 12px;
+  border-radius: 50%;
+  color: #afb1b8;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-links:hover, .icon-links:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+}
+
+.social-icons {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  fill: currentColor;
+}
+
+.icon-color {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+  padding: 12px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-color:last-child {
+  margin-right: 0px;
+}
+
+.icon-color:hover, .icon-color:focus {
+  background-color: #2196f3;
+}
+
 .hero {
   margin-bottom: 30px;
   text-align: center;
@@ -375,7 +444,15 @@ body {
 .images {
   padding: 0;
   margin: 0;
+  margin-bottom: 30px;
   list-style: none;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.images:last-child {
+  margin-bottom: 0;
 }
 
 .titles {
@@ -411,6 +488,7 @@ body {
 
 .team-profile .description {
   margin: 0;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
