--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -1,1 +1,61 @@
- 
+.team-links {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+  padding-bottom: 24px;
+  list-style: none;
+  width: 206px;
+}
+
+.icons-bar {
+  display: flex;
+
+  &:last-child {
+    margin-right: 0px;
+  }
+}
+
+.icon-links {
+  width: 44px;
+  height: 44px;
+
+  padding: 12px;
+  border-radius: 50%;
+  color: $social-links-color;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    color: $secondary-text-color;
+  }
+}
+
+.social-icons {
+  display: inline-flex;
+  align-items: center;
+  fill: currentColor;
+}
+
+.icon-color {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+  padding: 12px;
+  border-radius: 50%;
+  background-color: $accent-bg-links-color;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:last-child {
+    margin-right: 0px;
+  }
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
+}
