--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -6,9 +6,20 @@
 
 .images {
   padding: 0;
-  margin: 0;
-  list-style: none;
+  margin: 0;  
+  list-style: none;  
+  }
 }
+
+.team-photo {
+  margin-bottom: 30px;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  
+  }
+
 .titles {
   margin: 0;
   margin-bottom: 30px;
@@ -45,6 +56,7 @@
 
   .description {
     margin: 0;
+    margin-bottom: 16px;
 
     font-size: 16px;
     line-height: 19px;
