--- a/css/main.css
+++ b/css/main.css
@@ -294,8 +294,8 @@ body {
           align-items: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 24px;
   padding: 0;
+  padding-bottom: 24px;
   list-style: none;
   width: 206px;
 }
@@ -441,18 +441,22 @@ body {
   background-color: #f5f4fa;
 }
 
-.images {
+.team .images {
   padding: 0;
   margin: 0;
-  margin-bottom: 30px;
   list-style: none;
+}
+
+.team .team-photo {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.images:last-child {
-  margin-bottom: 0;
+@media screen and (max-width: 767px) {
+  .team .team-photo:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .titles {
@@ -467,13 +471,16 @@ body {
 }
 
 .photo {
-  margin-bottom: 30px;
+  display: block;
   width: 100%;
   height: 100%;
 }
 
 .team-profile {
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 24px;
+  background-color: #ffffff;
 }
 
 .team-profile .text {
@@ -492,5 +499,28 @@ body {
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
+}
+
+.clients-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.clients-container .clients {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+}
+
+.clients-logo {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 210px;
+  height: 90px;
 }
 /*# sourceMappingURL=main.css.map */
