--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -2,23 +2,25 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $secondary-bg-color;
-}
 
-.images {
-  padding: 0;
-  margin: 0;  
-  list-style: none;  
+  .images {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+
+  .team-photo {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+    &:not(:last-child) {
+      @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
+      }
+    }
   }
 }
-
-.team-photo {
-  margin-bottom: 30px;
-
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  
-  }
 
 .titles {
   margin: 0;
@@ -34,13 +36,16 @@
   color: $title-text-color;
 }
 .photo {
-  margin-bottom: 30px;
+  display: block;
   width: 100%;
   height: 100%;
 }
 
 .team-profile {
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 24px;
+  background-color: $secondary-text-color;
 
   .text {
     margin: 0;
