--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-right: 10px;
 }
 
 .icons-bar:last-child {
@@ -507,6 +508,7 @@ body {
 }
 
 .clients-container .clients {
+  margin: -15px;
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -522,5 +524,41 @@ body {
   display: inline-flex;
   width: 210px;
   height: 90px;
+  margin: 15px;
+}
+
+.clients-logo:nth-last-child(-n + 2) {
+  margin-bottom: 0;
+}
+
+.regular-clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: #afb1b8;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.regular-clients:hover, .regular-clients:focus {
+  background-color: #ffffff;
+  border: 1px solid #2196f3;
+  outline: none;
+  color: #2196f3;
+}
+
+.regular-clients .icon-logo {
+  fill: currentColor;
 }
 /*# sourceMappingURL=main.css.map */
