--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -3,6 +3,7 @@
   padding-bottom: 60px;
 
   .clients {
+    margin: -15px;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
@@ -14,4 +15,37 @@
   display: inline-flex;
   width: 210px;
   height: 90px;
+  margin: 15px;
+
+  &:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
+.regular-clients {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid $social-links-color;
+  border-radius: 4px;
+  background-color: $secondary-text-color;
+  color: $social-links-color;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $secondary-text-color;
+    border: 1px solid $accent-color;
+    outline: none;
+    color: $accent-color;
+  }
+
+  .icon-logo {
+    fill: currentColor;
+  }
 }
