--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,9 +1,10 @@
 .form {
-  width: 570px;
+  width: 450px;
 
   .form-field {
     .contact-label {
       display: block;
+      margin-bottom: 20px;
 
       font-weight: bold;
       font-size: 14px;
@@ -14,11 +15,12 @@
     }
 
     .contact-input {
-      width: 358px;
+      width: 100%;
       height: 50px;
       border: 0;
       padding: 0;
       padding-left: 16px;
+      margin-bottom: 20px;
 
       color: $accent-text-link-color;
       background-color: $primary-bg-color;
@@ -51,6 +53,9 @@
   border: 0;
   display: flex;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  outline: none;
 
   padding: 0 29px;
   width: 200px;
@@ -62,6 +67,7 @@
   cursor: pointer;
 
   .button-text {
+    margin-right: 10px;
     text-align: center;
 
     font-weight: bold;
