--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ body {
 /*/ Кнопка секции герой*/
 /* Кнопка х в модалке*/
 .modal-button {
+  position: absolute;
   top: 8px;
   right: 8px;
   width: 30px;
@@ -72,7 +73,8 @@ body {
 /*/ Кнопка х в модалке*/
 /* Кнопка отправить в модалке*/
 .send {
-  left: 164px;
+  position: absolute;
+  left: 120px;
   bottom: 40px;
   width: 200px;
   height: 50px;
@@ -380,6 +382,230 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 40px;
+  width: 450px;
+  height: 609px;
+  cursor: pointer;
+  background-color: #ffffff;
+}
+
+.form-title {
+  margin: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.data {
+  position: absolute;
+  top: 46%;
+  left: 59%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 448px;
+  height: 342px;
+  cursor: pointer;
+}
+
+.data-form {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.data-list {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.modal-label {
+  margin-bottom: 4px;
+  cursor: pointer;
+}
+
+.modal-input {
+  margin-bottom: 10px;
+  padding-left: 42px;
+  width: 370px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.data-list:hover .modal-input {
+  border: 1px solid #2196f3;
+  background-color: #ffffff;
+}
+
+.data-list:focus-within > .modal-input {
+  border: 1px solid #2196f3;
+  background-color: #ffffff;
+}
+
+.icon-data {
+  position: absolute;
+  top: 33px;
+  left: 15px;
+  fill: #212121;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.data-list:hover .icon-data {
+  fill: #2196f3;
+}
+
+.data-list:focus-within > .icon-data {
+  fill: #2196f3;
+}
+
+.comment {
+  width: 370px;
+  height: 120px;
+  resize: none;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment::-webkit-input-placeholder {
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.comment:-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.comment::-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.comment::placeholder {
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.data-list:hover .comment {
+  border: 1px solid #2196f3;
+  background-color: #ffffff;
+}
+
+.data-list:focus-within > .comment {
+  border: 1px solid #2196f3;
+  background-color: #ffffff;
+}
+
+.checkbox {
+  position: absolute;
+  left: 41px;
+  bottom: 105px;
+  cursor: pointer;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input {
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  position: absolute;
+}
+
+.check-box {
+  position: absolute;
+  top: 3px;
+  left: 7px;
+  width: 16px;
+  height: 15px;
+  margin-left: -8px;
+  border: 2px solid #212121;
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+
+.checkbox-input:checked + .check-box {
+  border-color: #2196f3;
+  background-color: #2196f3;
+  background-image: url(../../img/sprite/icon-check.svg);
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.checkbox-input:focus-within + .check-box {
+  border-color: #2196f3;
+}
+
+.contract-term {
+  display: inline-block;
+  padding-left: 23px;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+}
+
+.contract-link {
+  padding-left: 0;
+  text-decoration: none;
+  color: #2196f3;
+  outline: none;
 }
 
 .hero {
