--- a/css/main.css
+++ b/css/main.css
@@ -234,16 +234,23 @@ body {
 /*/ссылки в index.html*/
 /*ссылки кнопки в portfolio.html*/
 .links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0px;
   padding: 0px;
+  list-style: none;
 }
 
 .links .links-button {
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 
-.links .links-button:last-child {
-  margin-right: 0px;
+.links .links-button:nth-last-child(-n + 2) {
+  margin-bottom: 40px;
 }
 
 .links .links-button .links-description {
@@ -608,6 +615,41 @@ body {
   outline: none;
 }
 
+/* Выезжающий блок */
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.product-overlay {
+  position: absolute;
+  left: 0;
+  bottom: -100%;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.border:hover .product-overlay {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+.thumb-text {
+  position: absolute;
+  margin: 0px;
+  width: 322px;
+  font-size: 18px;
+  line-height: 1.555;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
 .hero {
   margin-bottom: 30px;
   text-align: center;
@@ -862,5 +904,55 @@ body {
 
 .icons .subtitle-text {
   margin-top: 0;
+}
+
+.section-bar {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.image-description {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
+.border {
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.border:last-child {
+  margin-bottom: 0;
+}
+
+.border .portfolio-links {
+  text-decoration: none;
+}
+
+.site-bar {
+  padding: 20px 24px;
+}
+
+.subtitle-bar {
+  margin: 0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: #212121;
+}
+
+.description-bar {
+  margin: 0;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 /*# sourceMappingURL=main.css.map */
