--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "./components/logo";
 @import "./components/social-links";
 @import "./components/modal";
-
+@import "./components/thumb";
 @import "./layout/nav";
 @import "./layout/hero";
 @import "./layout/services";
