--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -9,7 +9,7 @@
 .list-description {
   margin-bottom: 30px;
 
-  & :last-child {
+  &:last-child {
     margin-bottom: 0;
   }
 
@@ -22,6 +22,10 @@
   }
 }
 .subtitle {
+  margin: 0;
+  margin-bottom: 10px;
+  padding-top: 30px;
+
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -32,6 +36,7 @@
   color: $title-text-color;
 }
 .first-description {
+  margin: 0;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
