--- a/css/main.css
+++ b/css/main.css
@@ -99,10 +99,13 @@ body {
 /*/ Кнопка отправить в модалке*/
 /* Кнопка бургер*/
 .menu-button {
-  display: block;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   margin: 0;
   padding: 0;
   border: none;
+  outline: none;
   background-color: transparent;
 }
 
@@ -111,10 +114,6 @@ body {
 }
 
 .menu-button .is-open.icon-cross {
-  display: block;
-}
-
-.menu-button .icon-menu {
   display: block;
 }
 
@@ -315,6 +314,7 @@ body {
 
 .Webstudio {
   margin: 0;
+  margin-right: 276px;
   font-family: Raleway;
   font-weight: bold;
   font-size: 24px;
@@ -684,11 +684,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .list,
 .address {
-  opacity: 0;
+  display: none;
 }
 
 .hero {
