--- a/css/main.css
+++ b/css/main.css
@@ -109,15 +109,13 @@ body {
   background-color: transparent;
 }
 
-.menu-button .icon-cross {
-  display: none;
-}
-
-.menu-button .is-open.icon-cross {
+.menu-button .icon-menu,
+.menu-button.is-open .icon-cross {
   display: block;
 }
 
-.menu-button .is-open.icon-menu {
+.menu-button .icon-cross,
+.menu-button.is-open .icon-menu {
   display: none;
 }
 
@@ -425,6 +423,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
