--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -80,15 +80,13 @@
 
   background-color: transparent;
 
-  .icon-cross {
-    display: none;
-  }
-
-  .is-open.icon-cross {
+  .icon-menu,
+  &.is-open .icon-cross {
     display: block;
   }
 
-  .is-open.icon-menu {
+  .icon-cross,
+  &.is-open .icon-menu {
     display: none;
   }
 }
