modal form mobile

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,10 @@
+.contacts {
+  background-color: $primary-bg-color;
+}
+
 .padding-contacts {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: $primary-bg-color;
 }
 
 .box-container {
