--- a/css/main.css
+++ b/css/main.css
@@ -422,8 +422,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
+  background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -692,6 +692,10 @@ body {
   display: none;
 }
 
+.icon-menu {
+  z-index: 2;
+}
+
 .hero {
   margin-bottom: 30px;
   text-align: center;
@@ -905,10 +909,13 @@ body {
   fill: currentColor;
 }
 
+.contacts {
+  background-color: #2f303a;
+}
+
 .padding-contacts {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #2f303a;
 }
 
 .box-container {
