--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,3 +19,4 @@
 @import "./layout/clients";
 @import "./layout/footer";
 @import "./layout/portfolio-description";
+@import "./components/mobile-links";
