--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,12 @@ body {
   display: none;
 }
 
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
 /* Кнопка бургер*/
 .form {
   width: 450px;
@@ -677,6 +683,7 @@ body {
 }
 
 .inline-item {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -687,17 +694,97 @@ body {
   padding-bottom: 16px;
 }
 
-.list,
-.address {
-  display: none;
+.menu-container {
+  background-color: #ffffff;
 }
 
-.icon-menu {
-  z-index: 2;
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    padding: 48px 40px;
+    width: 100%;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .item {
+    margin-bottom: 32px;
+  }
+  .item:last-child {
+    margin-bottom: 302px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .list-links {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: #212121;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .list-links:hover, .list-links:focus {
+    color: #2196f3;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .nav-contact .icon-contacts {
+    display: none;
+  }
+  .nav-contact .phone {
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    color: #2196f3;
+  }
+  .nav-contact .mail {
+    margin-bottom: 64px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.02em;
+  }
 }
 
 .hero {
-  margin-bottom: 30px;
   text-align: center;
   background-color: #2f303a;
 }
@@ -1009,5 +1096,31 @@ body {
   line-height: 30px;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+.nav-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-icons .socials-size {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  margin-right: 10px;
+}
+
+.nav-icons .socials-size:last-child {
+  margin-right: 0;
 }
 /*# sourceMappingURL=main.css.map */
