--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -89,6 +89,10 @@
   &.is-open .icon-menu {
     display: none;
   }
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 /* Кнопка бургер*/
