--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,5 +1,7 @@
-.inline-item {
+.header-position {
   position: relative;
+}
+.inline-item {
   display: flex;
   align-items: center;
   padding-top: 16px;
