--- a/css/main.css
+++ b/css/main.css
@@ -682,8 +682,11 @@ body {
   color: #ffffff;
 }
 
-.inline-item {
+.header-position {
   position: relative;
+}
+
+.inline-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1111,16 +1114,20 @@ body {
 }
 
 .nav-icons .socials-size {
+  padding-right: 10px;
+  margin-right: 10px;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
   letter-spacing: 0.02em;
   color: #2196f3;
-  margin-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .nav-icons .socials-size:last-child {
   margin-right: 0;
+  border-right: none;
+  padding-right: 0;
 }
 /*# sourceMappingURL=main.css.map */
