--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -18,3 +18,4 @@ $text-picture-bg-color: rgba(47, 48, 58, 0.8);
 $contacts-input-bg-color: rgba(255, 255, 255, 0.3);
 $input-border: rgba(33, 33, 33, 0.2);
 $placeholder-color: rgba(117, 117, 117, 0.5);
+$social-vertical-line: rgba(33, 33, 33, 0.2);
