--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,15 @@ body {
   color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .Webstudio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 88px;
+  }
+}
+
 .team-links {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -452,7 +461,7 @@ body {
 
 .modal {
   position: absolute;
-  top: 50%;
+  top: 90%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -692,8 +701,67 @@ body {
   color: #ffffff;
 }
 
+.nav-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-icons .socials-size {
+  padding-right: 10px;
+  margin-right: 10px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.nav-icons .socials-size:last-child {
+  margin-right: 0;
+  border-right: none;
+  padding-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-social {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .line {
+    position: relative;
+  }
+  .line::after {
+    content: " ";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
+}
+
 .header-position {
   position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .header-position {
+    position: none;
+  }
 }
 
 .inline-item {
@@ -707,13 +775,20 @@ body {
   padding-bottom: 16px;
 }
 
-.menu-container {
+@media screen and (min-width: 768px) {
+  .inline-item {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
+.inline-item .menu-container {
   background-color: #ffffff;
   z-index: 1;
 }
 
 @media screen and (max-width: 767px) {
-  .menu-container {
+  .inline-item .menu-container {
     display: none;
     position: absolute;
     top: 100%;
@@ -721,26 +796,42 @@ body {
     padding: 48px 40px;
     width: 100%;
   }
-  .menu-container.is-open {
+  .inline-item .menu-container.is-open {
     display: block;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .menu-container {
+  .inline-item .menu-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    z-index: 0;
   }
 }
 
-.list {
+.inline-item .list {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .inline-item .list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -752,6 +843,24 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .item {
+    margin-right: 50px;
+  }
+  .item:last-child {
+    margin-right: 0;
+  }
+}
+
+.list-links {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-links:hover, .list-links:focus {
+  color: #2196f3;
+}
+
 @media screen and (max-width: 767px) {
   .list-links {
     font-weight: 500;
@@ -760,10 +869,25 @@ body {
     letter-spacing: 0.02em;
     text-decoration: none;
     color: #212121;
-    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .list-links:hover, .list-links:focus {
+}
+
+@media screen and (min-width: 768px) {
+  .list-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-decoration: none;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: #212121;
+  }
+  .list-links .current {
+    fill: #2196f3;
     color: #2196f3;
   }
 }
@@ -795,6 +919,18 @@ body {
     font-size: 24px;
     line-height: 28px;
     letter-spacing: 0.02em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -1114,35 +1250,5 @@ body {
   line-height: 30px;
   letter-spacing: 0.03em;
   color: #757575;
-}
-
-.nav-icons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-icons .socials-size {
-  padding-right: 10px;
-  margin-right: 10px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  letter-spacing: 0.02em;
-  color: #2196f3;
-  border-right: 1px solid rgba(33, 33, 33, 0.2);
-}
-
-.nav-icons .socials-size:last-child {
-  margin-right: 0;
-  border-right: none;
-  padding-right: 0;
 }
 /*# sourceMappingURL=main.css.map */
