--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,39 +1,58 @@
 .header-position {
   position: relative;
+
+  @media screen and (min-width: $tablet) {
+    position: none;
+  }
 }
 .inline-item {
   display: flex;
   align-items: center;
   padding-top: 16px;
   padding-bottom: 16px;
-}
 
-.menu-container {
-  background-color: $secondary-text-color;
-  z-index: 1;
+  @media screen and (min-width: $tablet) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 
-  @media screen and (max-width: 767px) {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    padding: 48px 40px;
-    width: 100%;
+  .menu-container {
+    background-color: $secondary-text-color;
+    z-index: 1;
 
-    &.is-open {
-      display: block;
+    @media screen and (max-width: 767px) {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      padding: 48px 40px;
+      width: 100%;
+
+      &.is-open {
+        display: block;
+      }
+    }
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      z-index: 0;
     }
   }
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-grow: 1;
+
+  .list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      align-items: center;
+    }
   }
 }
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+
 .item {
   @media screen and (max-width: 767px) {
     margin-bottom: 32px;
@@ -42,8 +61,22 @@
       margin-bottom: 302px;
     }
   }
+  @media screen and (min-width: $tablet) {
+    margin-right: 50px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 .list-links {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+
   @media screen and (max-width: 767px) {
     font-weight: 500;
     font-size: 40px;
@@ -51,11 +84,23 @@
     letter-spacing: 0.02em;
     text-decoration: none;
     color: $title-text-color;
+  }
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    text-decoration: none;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-    &:hover,
-    &:focus {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+
+    color: $title-text-color;
+
+    .current {
+      fill: $accent-color;
       color: $accent-color;
     }
   }
@@ -85,5 +130,9 @@
       line-height: 28px;
       letter-spacing: 0.02em;
     }
+  }
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: column;
   }
 }
