--- a/css/main.css
+++ b/css/main.css
@@ -979,6 +979,17 @@ body {
   list-style: none;
 }
 
+@media screen and (min-width: 768px) {
+  .list-bar {
+    margin: -15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .list-description {
   margin-bottom: 30px;
 }
@@ -987,11 +998,36 @@ body {
   margin-bottom: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .list-description {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 354px;
+    margin: 15px;
+  }
+  .list-description:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
 .list-description .icon {
-  padding: 25px 190px;
+  padding-bottom: 25px;
+  padding-top: 25px;
   width: 450px;
   height: 120px;
   background-color: #f5f4fa;
+}
+
+@media screen and (min-width: 768px) {
+  .list-description .icon {
+    width: 354px;
+    height: 120px;
+  }
 }
 
 .subtitle {
@@ -1005,6 +1041,12 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
+}
+
+@media screen and (min-width: 768px) {
+  .subtitle {
+    text-align: left;
+  }
 }
 
 .first-description {
