--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -4,6 +4,12 @@
   margin-left: auto;
   margin-right: auto;
   list-style: none;
+
+  @media screen and (min-width: $tablet) {
+    margin: -15px;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .list-description {
@@ -12,13 +18,29 @@
   &:last-child {
     margin-bottom: 0;
   }
+  @media screen and (min-width: $tablet) {
+    display: inline-flex;
+    flex-direction: column;
+    width: 354px;
+    margin: 15px;
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
 
   .icon {
-    padding: 25px 190px;
+    padding-bottom: 25px;
+    padding-top: 25px;
     width: 450px;
     height: 120px;
 
     background-color: $secondary-bg-color;
+
+    @media screen and (min-width: $tablet) {
+      width: 354px;
+      height: 120px;
+    }
   }
 }
 .subtitle {
@@ -34,6 +56,10 @@
   text-transform: uppercase;
 
   color: $title-text-color;
+
+  @media screen and (min-width: $tablet) {
+    text-align: left;
+  }
 }
 .first-description {
   margin: 0;
