--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -39,6 +39,9 @@
       width: 100%;
       z-index: 0;
     }
+    @media screen and (min-width: $desktop) {
+      padding-top: 32px;
+    }
   }
 
   .list {
@@ -134,5 +137,8 @@
   @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: column;
+  }
+  @media screen and (min-width: $desktop) {
+    flex-direction: row;
   }
 }
