--- a/css/main.css
+++ b/css/main.css
@@ -1105,6 +1105,16 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .list-description {
+    width: 270px;
+    margin: 15px;
+  }
+  .list-description:last-child {
+    margin-right: 0;
+  }
+}
+
 .list-description .icon {
   padding-bottom: 25px;
   padding-top: 25px;
@@ -1117,6 +1127,12 @@ body {
   .list-description .icon {
     width: 354px;
     height: 120px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list-description .icon {
+    width: 270px;
   }
 }
 
