--- a/css/main.css
+++ b/css/main.css
@@ -1168,6 +1168,63 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .title-bar {
+    padding-bottom: 94px;
+  }
+}
+
+.image-bar {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 0;
+}
+
+.titles {
+  margin: 0px;
+  margin-bottom: 50px;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+  color: #212121;
+}
+
+.list-images {
+  position: relative;
+  width: 370px;
+  height: 294px;
+}
+
+.list-images .text-picture {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
 .team {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1188,6 +1245,14 @@ body {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team .images {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    margin: 0;
   }
 }
 
@@ -1217,6 +1282,23 @@ body {
   }
   .team .team-photo:nth-last-child(-n + 2) {
     margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team .team-photo {
+    margin: 0;
+    margin-right: 15px;
+  }
+  .team .team-photo:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-bottom: 94px;
+    padding-top: 94px;
   }
 }
 
@@ -1262,6 +1344,12 @@ body {
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 1200px) {
+  .team-profile {
+    padding-bottom: 0;
+  }
+}
+
 .clients-container {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1276,6 +1364,13 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   list-style: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-container {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .clients-logo {
@@ -1294,6 +1389,12 @@ body {
 @media screen and (min-width: 768px) {
   .clients-logo {
     width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-logo {
+    width: 170px;
   }
 }
 
@@ -1412,6 +1513,13 @@ body {
 .section-bar {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-bar {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .image-description {
