--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -9,6 +9,10 @@
     flex-wrap: wrap;
     list-style: none;
   }
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .clients-logo {
@@ -22,6 +26,9 @@
   }
   @media screen and (min-width: $tablet) {
     width: 226px;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 170px;
   }
 }
 
