--- a/sass/layout/_portfolio-description.scss
+++ b/sass/layout/_portfolio-description.scss
@@ -5,6 +5,11 @@
 .section-bar {
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .image-description {
