--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -13,6 +13,11 @@
       display: flex;
       flex-wrap: wrap;
     }
+
+    @media screen and (min-width: $desktop) {
+      flex-wrap: nowrap;
+      margin: 0;
+    }
   }
 
   .team-photo {
@@ -35,6 +40,18 @@
         margin-bottom: 0;
       }
     }
+    @media screen and (min-width: $desktop) {
+      margin: 0;
+      margin-right: 15px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 94px;
+    padding-top: 94px;
   }
 }
 
@@ -82,5 +99,8 @@
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 0.03em;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 0;
   }
 }
