--- a/css/main.css
+++ b/css/main.css
@@ -1652,6 +1652,15 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .border {
+    width: 370px;
+  }
+  .border:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
 .site-bar {
   padding: 20px 24px;
 }
