--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,12 @@ body {
   background-color: #ffffff;
 }
 
+.photo {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .button {
   border-radius: 4px;
   padding: 10px 32px;
