--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
@@ -21,6 +23,8 @@
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
@@ -34,8 +38,6 @@ body {
 
 .photo {
   display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .button {
@@ -111,10 +113,14 @@ body {
 /*/ Кнопка отправить в модалке*/
 /* Кнопка бургер*/
 .menu-button {
+  position: absolute;
+  top: 5px;
+  right: 15px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   margin: 0;
+  margin-left: 276px;
   padding: 0;
   border: none;
   outline: none;
@@ -412,7 +418,6 @@ body {
 
 .Webstudio {
   margin: 0;
-  margin-right: 276px;
   font-family: Raleway;
   font-weight: bold;
   font-size: 24px;
@@ -889,6 +894,7 @@ body {
 }
 
 .inline-item {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1275,8 +1281,6 @@ body {
 }
 
 .team {
-  padding-top: 60px;
-  padding-bottom: 60px;
   background-color: #f5f4fa;
 }
 
@@ -1344,13 +1348,6 @@ body {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .team {
-    padding-bottom: 94px;
-    padding-top: 94px;
-  }
-}
-
 .titles {
   margin: 0;
   margin-bottom: 30px;
@@ -1399,12 +1396,7 @@ body {
   }
 }
 
-.clients-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.clients-container .clients {
+.clients {
   margin: -15px;
   padding: 0;
   display: -webkit-box;
@@ -1415,13 +1407,6 @@ body {
   list-style: none;
 }
 
-@media screen and (min-width: 1200px) {
-  .clients-container {
-    padding-bottom: 94px;
-    padding-top: 94px;
-  }
-}
-
 .clients-logo {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -1429,6 +1414,10 @@ body {
   width: 210px;
   height: 90px;
   margin: 15px;
+}
+
+.clients-logo:nth-child(-n + 2) {
+  margin-top: 0;
 }
 
 .clients-logo:nth-last-child(-n + 2) {
@@ -1594,18 +1583,6 @@ body {
 
 .border-line {
   border: 1px solid #ececec;
-}
-
-.section-bar {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-@media screen and (min-width: 1200px) {
-  .section-bar {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
 }
 
 .image-description {
