--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,18 +1,9 @@
-.clients-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
-
-  .clients {
-    margin: -15px;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-  }
-  @media screen and (min-width: $desktop) {
-    padding-bottom: 94px;
-    padding-top: 94px;
-  }
+.clients {
+  margin: -15px;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
 }
 
 .clients-logo {
@@ -21,9 +12,14 @@
   height: 90px;
   margin: 15px;
 
+  &:nth-child(-n + 2) {
+    margin-top: 0;
+  }
+
   &:nth-last-child(-n + 2) {
     margin-bottom: 0;
   }
+
   @media screen and (min-width: $tablet) {
     width: 226px;
   }
