--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,6 +1,8 @@
 .clients {
   margin: -15px;
+  margin-top: 30px;
   padding: 0;
+  margin-bottom: 15px;
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -22,9 +24,18 @@
 
   @media screen and (min-width: $tablet) {
     width: 226px;
+
+    &:nth-child(-n + 3) {
+      margin-top: 0;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
   @media screen and (min-width: $desktop) {
     width: 170px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
