--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -10,6 +10,7 @@
       margin: -15px;
       display: flex;
       flex-wrap: wrap;
+      padding-bottom: 15px;
     }
 
     @media screen and (min-width: $desktop) {
